--- a/pom.xml
+++ b/pom.xml
@@ -59,12 +59,25 @@
 			<version>1.7.10</version>
 		</dependency>
 
+		<!-- JSP -->
+		<dependency>
+			<groupId>jstl</groupId>
+			<artifactId>jstl</artifactId>
+			<version>1.2</version>
+		</dependency>
+
+		<!-- Apache Commons FileUpload -->
+		<dependency>
+		    <groupId>commons-fileupload</groupId>
+		    <artifactId>commons-fileupload</artifactId>
+		    <version>1.3.1</version>
+		</dependency>
 
 		<!-- commons -->
 		<dependency>
 			<groupId>commons-io</groupId>
 			<artifactId>commons-io</artifactId>
-			<version>1.4</version>
+			<version>2.4</version>
 		</dependency>
 
 
@@ -89,7 +102,6 @@
 			<version>${hibernate.version}</version>
 		</dependency>
 
-
 		<!-- MySQL -->
 		<dependency>
 			<groupId>mysql</groupId>
@@ -102,8 +114,8 @@
 			<artifactId>ibatis-core</artifactId>
 			<version>3.0</version>
 		</dependency>
-		
-		
+
+
 		<!-- Solr -->
 		<dependency>
 			<groupId>org.apache.solr</groupId>
